--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -25,7 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
-    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=fc0ebae46a968af5967646b946913722&libraries=services"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLEMAP_API_KEY%&callback=initMap&libraries=places&v=weekly&language=en" defer></script>        
+    
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
