--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -14,6 +14,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumBarunGothic@latest/nanumbarungothicsubset.css">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/moonspam/NanumSquare@1.0/nanumsquare.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -25,7 +27,6 @@
     -->
     <title>WEMET</title>
     <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLEMAP_API_KEY%&callback=initMap&libraries=places&v=weekly&language=en" defer></script>
-
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
