--- a/FrontEnd/public/index.html
+++ b/FrontEnd/public/index.html
@@ -24,7 +24,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>WEMET</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLEMAP_API_KEY%&callback=initMap&libraries=places&v=weekly&language=en" defer></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=%REACT_APP_GOOGLEMAP_API_KEY%&libraries=places&v=weekly&language=en" defer></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
